# Sentinel_Trade_OS_Project

./: .gitignore  README.md
Backend/: BookSnapshot.cpp  BookSnapshot.h  Logger.cpp  Logger.h  Makefile  MarketMaker.cpp  MarketMaker.h  MatchingEngine.cpp  MatchingEngine.h  Order.h  OrderBook.cpp  OrderBook.h  QUICKSTART.md  Semaphore.h  Stock.h  Trader.cpp  Trader.h  book.json  book.json.tmp  main.cpp  sim_stdout.txt  test_cases.cpp
GUI/: CMakeLists.txt  README.md  logmonitor.cpp  logmonitor.h  mainwindow.cpp  mainwindow.h  marketwidget.cpp  marketwidget.h  orderbookwidget.cpp  orderbookwidget.h  systemwidget.cpp  systemwidget.h  tradelogwidget.cpp  tradelogwidget.h
